docs/tests/typing/bad/testfile-comparison-1.cpp
class S { public: int a; };
int main() { int x; S s; 1 < s; }
